# DryRun-PartyApp

./: .flake8  .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  =1.7.0  =23.0.0  =3.0.0  =5.0.0  =6.0.0  HLD.md  PRECOMMIT_GUIDE.md  README.md  TODO.md  Vision.md  cleanup.py  create_image_dirs.py  create_placeholder_images.py  init_sample_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_dev.py  run_host.py  run_tests.py  setup.py  setup_precommit.py  setup_precommit_simple.py  start_servers.sh
app/: __init__.py  constants.py  models.py
app/guest/: __init__.py  routes.py
app/host/: __init__.py  routes.py
app/static/css/: style.css
app/templates/guest/: index.html  select.html
app/templates/host/: dashboard.html
tests/: README.md  __init__.py  conftest.py
tests/test_app/: __init__.py  test_app.py
tests/test_bac_calculation/: __init__.py  test_bac_logic.py
tests/test_constants/: __init__.py  test_constants.py
tests/test_models/: __init__.py  test_drink.py  test_guest.py
tests/test_routes/: __init__.py  test_guest_routes.py  test_host_routes.py
